# rusty_leasing_ninja

./: Cargo.toml  README.md
src/: main.rs
src/risk_management/: mod.rs  risk_management.rs
src/risk_management/controllers/: contract.rs
src/risk_management/domain_values/: credit_rating.rs  mod.rs  vote_result.rs
src/risk_management/dtos/: mod.rs  rate_form.rs  vote_form.rs
src/risk_management/entities/: contract.rs
src/risk_management/repositories/: contracts.rs
src/risk_management/services/: application_inbox.rs  check_credit_ranking.rs  list_contracts.rs  mod.rs  read_contract.rs  vote_contract.rs
src/sales/: mod.rs  sales.rs
src/sales/controllers/: contract.rs
src/sales/domain/: mod.rs
src/sales/domain/entity/: contract.rs
src/sales/domain/value/: amount.rs  brand.rs  car.rs  contract_number.rs  customer.rs  mod.rs  sign_date.rs
src/sales/domain_values/: amount.rs  brand.rs  car.rs  contract_failure.rs  contract_number.rs  currency.rs  customer.rs  mod.rs  sign_date.rs
src/sales/dtos/: fill_out_form.rs  mod.rs
src/sales/entities/: contract.rs  mod.rs
src/sales/repositories/: contracts.rs  mod.rs
src/sales/services/: fill_out_contract.rs  mod.rs  sign_contract.rs  view_contract.rs
src/shared/: mod.rs
src/shared/domain_values/: contract_failure.rs  contract_number.rs  mod.rs
src/shared/repositories/: mem_storage.rs  mod.rs
