[package]
name = "rusty_leasing_ninja"
version = "0.1.0"
edition = "2018"
authors = ["Tom Dymel <td@wps.de>"]
homepage = "https://leasingninja.github.io/"

[dependencies]
derive-getters = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
features = ["json"]